<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ResultActivity">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="12dp"
      android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/response_code"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_Rcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textSize="16sp"
        tools:text="200" />
  </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="12dp"
      android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/error"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textSize="16sp"
        tools:text="Bad gateway" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/linear_headers_parent_host"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="12dp"
          android:layout_weight="1"
          android:text="@string/headers"
          android:textSize="18sp"
          android:textStyle="bold" />

      <ImageView
          android:id="@+id/iv_add_header"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:src="@drawable/add"
          app:tint="@color/purple_700"
          android:contentDescription="@string/addicon" />

    </LinearLayout>

  </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="12dp"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/response_body"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">
      <TextView
          android:id="@+id/tv_response_body"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="12dp"
          android:textSize="16sp"
          tools:text="@string/ex_body" />
    </ScrollView>
  </LinearLayout>
</LinearLayout>